# ga-ocp

./: README.md
ga_ocp_core/: CMakeLists.txt  package.xml
ga_ocp_core/benchmark/: Crocoddyl_fddp_bench.cpp  Crocoddyl_fddp_budget_bench.cpp  Crocoddyl_sqp_bench.cpp
ga_ocp_core/include/ga_ocp/: BenchUtils.hpp  CrocoddylIntegration.hpp
ga_ocp_core/test/: Crocoddyl_collision_test.cpp  Crocoddyl_fddp_test.cpp  Crocoddyl_idmpc_test.cpp  Crocoddyl_motor_test.cpp  Crocoddyl_torLim_test.cpp  Crocoddyl_velLim_test.cpp
ga_ocp_ros2/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
ga_ocp_ros2/config/: closed_loop_mpc_leap.yaml  closed_loop_mpc_ur.yaml  collision_planner.yaml  motor_planner.yaml  target_interactive_marker.yaml
ga_ocp_ros2/launch/: ga_ocp_mujoco_closed_loop_leap.launch.py  ga_ocp_mujoco_closed_loop_ur.launch.py  ga_ocp_mujoco_collision.launch.py  ga_ocp_mujoco_motor.launch.py  ga_ocp_ur_collision.launch.py  ga_ocp_ur_motor.launch.py
ga_ocp_ros2/rviz/: ga_ocp_collision_validation.rviz  ga_ocp_motor_validation.rviz
ga_ocp_ros2/scripts/: joint_command_executor.py
ga_ocp_ros2/src/: closed_loop_mpc_node.cpp  crocoddyl_collision_planner_node.cpp  crocoddyl_motor_planner_node.cpp  ga_ocp_planning_panel.cpp  static_obstacle_marker_node.cpp  target_interactive_marker_node.cpp
